# ZeroAgent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cancel-signal-state.json  config.example.yaml  llmcore.py  pyproject.toml
.github/workflows/: pytest.yml
docs/: architecture.md  migration.md  quickstart.md  reflect.md
memory/: file_access_stats.json
scripts/: restart.sh  restart_za.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_runner.py  test_assets.py  test_bots.py  test_cli.py  test_compress_session.py  test_config.py  test_converters.py  test_cost_tracker.py  test_desktop_bridge.py  test_exceptions.py  test_extension_tools.py  test_failover.py  test_frontend_contract.py  test_ga_alignment.py  test_handler.py  test_langfuse_plugin.py  test_language.py  test_loop.py  test_memory_manager.py  test_memory_stats.py  test_packaging.py  test_reflect_runner.py  test_registry.py  test_scheduler_alignment.py  test_sessions.py  test_sse_parsers.py  test_stapp_frontend.py  test_turn_callback.py  test_types.py  test_web_tools.py
zero_agent/: __init__.py  btw_cmd.py  chatapp_common.py  continue_cmd.py  cost_tracker.py  export_cmd.py  llmcore.py  review_cmd.py  session_names.py  slash_cmds.py
zero_agent/adapters/: agent_runner.py
zero_agent/assets/: __init__.py  global_mem_insight_template.txt  global_mem_insight_template_en.txt  insight_fixed_structure.txt  insight_fixed_structure_en.txt  sys_prompt.txt  sys_prompt_en.txt
zero_agent/assets/memory_seed/sops/: autonomous_operation_sop.md  autonomous_operation_task_planning.md  checklist_sop.md  goal_hive_sop.md  goal_mode_sop.md  incubator_sop.md  ljqCtrl_sop.md  memory_management_sop.md  procmem_scanner_sop.md  review_sop.md  salient_mining_sop.md  skill_search.md  subagent.md  supervisor_sop.md  verify_sop.md  vision_sop.md  web_setup_sop.md
zero_agent/assets/review_sop/: review_inline_prompt.en.txt  review_inline_prompt.txt
zero_agent/assets/templates/: vision_api.template.py
zero_agent/assets/tmwd_cdp_bridge/: background.js  config.js
zero_agent/bots/: __init__.py  common.py  dingtalk_app.py  discord_app.py  feishu_app.py  qq_app.py  telegram_app.py  wechat_app.py  wecom_app.py
zero_agent/bots/shared/: __init__.py  btw_cmd.py  continue_cmd.py  export_cmd.py  review_cmd.py  session_names.py
zero_agent/browser/: __init__.py
zero_agent/core/: __init__.py  agent.py  completion_gate.py  config.py  exceptions.py  handler.py  hooks.py  interfaces.py  interruption.py  loop.py  types.py
zero_agent/frontends/: DESKTOP_PET_README.md  __init__.py  acp_bridge.py  chatapp_common.py  conductor.html  conductor.py  continue_cmd.py  dcapp.py  desktop_bridge.py  desktop_commands.py  dingtalkapp.py  fsapp.py  genericagent_acp_bridge.py  hub.pyw  launch.pyw  launcher.py  qqapp.py  qtapp.py  slash_cmds.py  stapp.py  stapp2.py  tgapp.py  tui_app.py  tui_v3.py  tuiapp.py  tuiapp_v2.py  ui_contract.py  wechatapp.py  wecomapp.py  za_adapter.py
zero_agent/frontends/desktop/: package.json
zero_agent/frontends/desktop/src-tauri/: Cargo.toml  tauri.conf.json
zero_agent/frontends/desktop/src-tauri/icons/: icon.icns
zero_agent/frontends/desktop/static/: app.js  fallback.html  ga-web.js  index.html  loading.html  styles.css  za-web.js
zero_agent/frontends/memory/: file_access_stats.json
zero_agent/frontends/themes/: __init__.py  _loader.py  chat_ui.css  dark_vars.css  light_vars.css  qt_colors.py  qt_markdown.css  stapp2_overrides.css  stapp_overrides.css
zero_agent/llm/: __init__.py  base.py  converters.py  factory.py  failover.py  sessions.py  sse_parsers.py
zero_agent/memory/: __init__.py  compress_session.py  file_access_stats.json  global_mem.txt  global_mem_insight.txt  manager.py  ocr_utils.py  stock_analysis_sop.md
zero_agent/memory/sops/: keychain.py
zero_agent/memory/sops/L4_raw_sessions/: compress_session.py
zero_agent/plugins/: langfuse_tracing.py
zero_agent/reflect/: __init__.py  autonomous.py  goal_mode.py  runner.py  scheduler.py  subagent.py
zero_agent/runners/: __init__.py  agent_runner.py  cli.py  reflect_runner.py
zero_agent/skills/stock_analysis/: __init__.py  data_provider.py  indicators.py
zero_agent/temp/plan_morphling_stock_skill/: plan.md
zero_agent/tools/: __init__.py  registry.py
zero_agent/tools/builtin/: __init__.py  code.py  file.py  im.py  memory.py  memory_plot.py  search.py  user.py  vision.py  web.py
zero_agent/utils/: __init__.py  autonomous_operation_helper.py  checklist_helper.py  configure.py  cost_tracker.py  files.py  keychain.py  memory_stats.py  text.py  ui_detect.py  vision_api.py
zero_agent/utils/skill_search/: __main__.py
(+2 files in other folders)
