[project]
name = "zero-agent"
version = "0.1.0"
description = "A clean, reusable autonomous agent framework"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "litellm>=1.50",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28", "pywebview>=4.0", "aiohttp>=3.9"]
qt = ["PySide6>=6.6", "markdown>=3.5"]
browser = ["beautifulsoup4>=4.12", "bottle>=0.12", "simple-websocket-server>=0.4"]
memory = ["rapidocr-onnxruntime>=1.3", "Pillow>=10.0"]
plot = ["matplotlib>=3.7"]
telegram = ["python-telegram-bot>=20.0"]
discord = ["discord.py>=2.3"]
bots = ["zero-agent[telegram,discord]"]
all-extras = ["zero-agent[ui,qt,browser,memory,plot,bots]"]

[project.scripts]
zero-agent = "zero_agent.runners.cli:main"
zero-agent-configure = "zero_agent.utils.configure:main"
zero-agent-launcher = "zero_agent.frontends.launcher:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "zero_agent",
    "zero_agent.adapters",
    "zero_agent.bots",
    "zero_agent.core",
    "zero_agent.llm",
    "zero_agent.tools",
    "zero_agent.tools.builtin",
    "zero_agent.memory",
    "zero_agent.memory.sops",
    "zero_agent.runners",
    "zero_agent.utils",
    "zero_agent.reflect",
    "zero_agent.plugins",
    "zero_agent.frontends",
    "zero_agent.frontends.themes",
    "zero_agent.vendor",
    "zero_agent.vendor.genericagent",
    "zero_agent.assets",
]

[tool.setuptools.package-data]
"zero_agent.frontends" = [
    "desktop/static/*",
    "desktop/static/vendor/*",
    "skins/**/*",
    "*.gif",
    "*.png",
    "*.md",
]
"zero_agent.frontends.themes" = ["*.css"]
"zero_agent.assets" = ["code_run_header.py", "tmwd_cdp_bridge/*"]
"zero_agent.memory.sops" = ["*.md", "*.py", "**/*.md", "**/*.py", "**/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
